# qcsc-prefect

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  LICENSE  README.md  admin_create_blocks.py  mkdocs.yml  pyproject.toml
.github/workflows/: docs.yml
algorithms/gb_sqd/: .gitignore  README.md  create_blocks.py  deploy.py  gb_sqd_blocks.example.toml  manual_bulk_test.py  manual_bulk_test_commands.sh  pyproject.toml
algorithms/gb_sqd/docs/: bulk_submission_flow_design.md  bulk_submission_flow_runbook.md  bulk_submission_manual_test_plan.md  miyabi_bulk_rerun_runbook.md  task_splitting_design.md
algorithms/gb_sqd/gb_sqd/: __init__.py  artifact_keys.py  bulk.py  bulk_rerun.py  cli_args.py  discovery.py  fugaku_queue.py  main.py  manual_bulk_test.py  target_overrides.py
algorithms/gb_sqd/gb_sqd/tasks/: __init__.py  bulk_target_run.py  final_diagonalization.py  initialize.py  output_results.py  recovery_iteration.py
algorithms/gb_sqd/native/: README.md  build_gb_sqd.sh  build_gb_sqd_fugaku.sh  build_gb_sqd_miyabi_gpu.sh
algorithms/gb_sqd/tests/: test_bulk_rerun.py  test_bulk_target_run.py  test_bulk_target_run_task.py  test_cli_args.py  test_discovery.py  test_fugaku_queue.py  test_manual_bulk_test.py  test_target_overrides.py
algorithms/qcsc_workflow_utility/: pyproject.toml
algorithms/qcsc_workflow_utility/src/qcsc_workflow_utility/: __init__.py  chem.py
algorithms/sbd/: README.md  create_blocks.py  deploy.py  exec.py  pyproject.toml  sbd_blocks.example.toml  sbd_blocks.fugaku.example.toml
algorithms/sbd/data/: fcidump_N2_MO.txt
algorithms/sbd/default_params/: fe4s4.json  test_n2.json
algorithms/sbd/native/: README.md  build_sbd.sh  build_sbd_fugaku.sh  build_sbd_gpu.sh  main.cc
algorithms/sbd/sbd/: __init__.py  data_io.py  flow_params.py  lucj.py  main.py  np_type_extension.py  solver_job.py  sqd.py  transpile_custom.py
algorithms/skqd/: README.md  create_blocks.py  pyproject.toml  skqd_blocks.example.toml  skqd_blocks.fugaku.example.toml
algorithms/skqd/skqd_dice/: create_blocks.py  main.py  subsample.py
algorithms/skqd_z2lgt/: README.md  create_blocks.py  pyproject.toml  skqd_z2lgt_blocks.example.toml
algorithms/skqd_z2lgt/julia/: ising_dmrg.jl
algorithms/skqd_z2lgt/notebooks/: full_workflow.ipynb  krylov_parameters.ipynb  recovery_learning.ipynb
algorithms/skqd_z2lgt/scripts/prefect/: main.py
algorithms/skqd_z2lgt/scripts/tasks/: skqd_raw.py  skqd_recovery.py
algorithms/skqd_z2lgt/scripts/workflow/: skqd_random.py  skqd_raw.py  skqd_recovery.py  train_crbm.py
algorithms/skqd_z2lgt/skqd_z2lgt/: block_defaults.py  circuits.py  crbm.py  create_blocks.py  extensions.py  ising_dmrg.py  ising_hamiltonian.py  jax_experimental_sparse_linalg.py  main.py  mwpm.py  parameters.py  pauli.py  recovery_learning.py  sqd.py  train_crbm.py  utils.py
algorithms/skqd_z2lgt/skqd_z2lgt/_julia/: ising_dmrg.jl  mps_coverage.jl  mps_sparsity.jl
algorithms/skqd_z2lgt/skqd_z2lgt/tasks/: common.py  data.py  diagonalize.py  dmrg.py  experiment.py  open_output.py  preprocess.py  sample_quantum.py  skqd_random.py  skqd_raw.py  train_crbm.py  train_generator.py
algorithms/sqd/: README.md  build_dice.sh  build_dice_miyabi.sh  create_blocks.py  prefect.toml  pyproject.toml  sqd_blocks.example.toml  sqd_blocks.fugaku.example.toml
algorithms/sqd/perf/: README.md  tune_dice.py  tuning_mpi_parameters_with_dice.ipynb
algorithms/sqd/sqd_dice/: create_blocks.py  dice_job.py  input.dat.j2  main.py
docs/: concept.md  index.md
docs/howto/: howto_connect_to_prefect_on_mdx.md  howto_setup_file_sync.md  howto_setup_prefect_qiskit.md  howto_setup_prefect_qiskit_fugaku.md  howto_setup_python_env.md  howto_setup_python_env_fugaku.md  howto_setup_ssh_keys_for_mdx_and_miyabi.md  howto_setup_ssh_keys_for_mdx_and_miyabi_private.md  howto_shutdown_workflow.md  howto_test_slurm_with_docker_cluster.md  howto_use_mpi_locally.md
docs/images/: img-closed-blocks.img
docs/javascripts/: mermaid.js
docs/tutorials/: create_qcsc_workflow.md  create_qcsc_workflow_for_fugaku.md  create_qcsc_workflow_for_local_slurm.md  create_qcsc_workflow_for_miyabi.md  run_sbd_closed_loop_workflow.md  run_sbd_closed_loop_workflow_fugaku.md  tmp.md
examples/: __init__.py
examples/fugaku_prefect_hello_demo/: README.md  create_blocks.py  flow.py  hello_demo.sh
examples/miyabi_prefect_bitcount_demo/: README.md  __init__.py  bitcount_blocks.example.toml  bitcount_common.py  create_blocks.py  flow_optimized.py  flow_tutorial_style.py  flow_wrapper.py  wrapper_block.py
examples/miyabi_prefect_bitcount_demo/src/: get_counts_hist.cpp  get_counts_json.cpp
examples/miyabi_prefect_hello_demo/: README.md  __init__.py  create_blocks.py  flow.py  hello_demo.sh
examples/prefect_bitcount_demo/: README.md  __init__.py  bitcount_blocks.example.toml  build_on_fugaku.sh  create_blocks.py  flow_optimized.py  flow_tutorial_style.py  get_counts_integration.py  options_resolver.py  quantum_sampling.py  test_create_blocks.py  test_quantum_sampling.py
hpc-prefect/: get_counts_integration.py  pyproject.toml  test.sh
hpc-prefect/examples/: __init__.py
hpc-prefect/examples/fugaku_prefect_hello_demo/: README.md  create_blocks.py  flow.py  hello_demo.sh
hpc-prefect/examples/miyabi_prefect_bitcount_demo/: README.md  bitcount_blocks.example.toml  build_on_miyabi.sh  create_blocks.py  flow_optimized.py  flow_wrapper.py  get_counts_integration.py  wrapper_block.py
hpc-prefect/examples/miyabi_prefect_hello_demo/: README.md  __init__.py  create_blocks.py  flow.py
prefect_hpc_demo/: QUICKSTART.md  __init__.py  blocks.py  flow_demo.py  models.py  pbs.py  resolver.py  tasks.py
prefect_hpc_hello_demo/: QUICKSTART.md  admin_create_blocks.py
prefect_hpc_hello_demo/prefect_hpc_demo/: __init__.py  blocks.py  flow_demo.py  models.py  pbs.py  resolver.py  tasks.py
prefect_hpc_hello_demo/src/: Makefile  hello_mpi.c
scripts/: prefect_sync_env_to_config.sh
