[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hpc-prefect-workspace"
version = "0.0.0"
description = "Monorepo workspace for HPC + Prefect integration"
readme = "docs/concept.md"
requires-python = ">=3.10"
dependencies = []

# この project 自体は配布しない想定
# （pip install . されても意味はない）
dynamic = []

# -----------------------------
# Workspace / Monorepo 設定
# -----------------------------

# --- uv ---
[tool.uv.workspace]
members = [
    "packages/hpc-prefect-core",
    "packages/hpc-prefect-adapters",
    "packages/hpc-prefect-blocks",
    "packages/hpc-prefect-executor",
]


[tool.uv.sources]
hpc-prefect-core     = { workspace = true }
hpc-prefect-adapters = { workspace = true }
hpc-prefect-blocks   = { workspace = true }
hpc-prefect-executor = { workspace = true }

# --- Poetry ---
[tool.poetry]
name = "hpc-prefect-workspace"
version = "0.0.0"
description = "Monorepo workspace for HPC + Prefect integration"
authors = ["HPC Team"]
packages = []

[tool.poetry.dependencies]
python = ">=3.10"

[tool.poetry.workspace]
members = [
    "packages/hpc-prefect-core",
    "packages/hpc-prefect-adapters",
    "packages/hpc-prefect-blocks",
    "packages/hpc-prefect-executor",
]

# --- Hatch ---
[tool.hatch.workspace]
members = [
    "packages/hpc-prefect-core",
    "packages/hpc-prefect-adapters",
    "packages/hpc-prefect-blocks",
    "packages/hpc-prefect-executor",
]

# -----------------------------
# 共通開発ツール設定（任意）
# -----------------------------

[tool.pytest.ini_options]
testpaths = [
    "packages",
]
addopts = "-ra"
markers = [
    "miyabi_integration: tests that require Miyabi login node and real qsub/qstat",
    "fugaku_integration: tests that require Fugaku login node and real pjsub/pjstat",
]

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "I"]
ignore = []

[tool.mypy]
python_version = "3.10"
strict = false
warn_unused_configs = true
warn_return_any = true
ignore_missing_imports = true
