[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "skqd_z2lgt"
version = "0.9.0"
description = "QCHPC demonstration with 2D Z2 LGT."
authors = [
    { name = "Yutaro Iiyama", email = "iiyama@icepp.s.u-tokyo.ac.jp" }
]
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy",
    "scipy",
    "h5py",
    "jax[cuda12]",
    "optax",
    "flax",
    "qiskit>=2.1.0",
    "qiskit-ibm-runtime>=0.41.0",
    "prefect==3.4.10",
    "prefect-qiskit==0.2.0",
    "rustworkx",
    "pymatching",
    "mpi4py",
    "PyYAML",
    "heavyhex_qft",
    "qcsc-prefect-core",
    "qcsc-prefect-adapters",
    "qcsc-prefect-blocks",
    "qcsc-prefect-executor",
]

[tool.uv.sources]
qcsc-prefect-core = { path = "../../packages/qcsc-prefect-core", editable = true }
qcsc-prefect-adapters = { path = "../../packages/qcsc-prefect-adapters", editable = true }
qcsc-prefect-blocks = { path = "../../packages/qcsc-prefect-blocks", editable = true }
qcsc-prefect-executor = { path = "../../packages/qcsc-prefect-executor", editable = true }
heavyhex_qft = { path = "../../libs/heavyhex-qft", editable = true }

[tool.setuptools]
packages = ["skqd_z2lgt"]
include-package-data = true
zip-safe = false

[tool.setuptools.package-data]
skqd_z2lgt = ["_julia/*.jl"]

[project.scripts]
skqd-z2lgt-deploy = "skqd_z2lgt.main:deploy"
skqd-z2lgt-create-blocks = "skqd_z2lgt.create_blocks:main"
