[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "sqd_dice"
version = "1.4.0"
description = "Prefect workflow of SQD experiment from arXiv:2405.05068."
authors = [
    { name = "Naoki Kanazawa", email = "knzwnao@jp.ibm.com" }
]
maintainers = [
    { name = "Naoki Kanazawa", email = "knzwnao@jp.ibm.com" }
]
requires-python = ">=3.11"
dependencies = [
    "ffsim",
    "Jinja2",
    "qiskit-addon-sqd",
    "prefect-qiskit",
    "prefect",
    "pydantic_numpy",
    "qcsc-prefect-dice",
    "qcsc_workflow_utility",
]

[tool.uv.sources]
qcsc-prefect-core = { path = "../../packages/qcsc-prefect-core", editable = true }
qcsc-prefect-adapters = { path = "../../packages/qcsc-prefect-adapters", editable = true }
qcsc-prefect-blocks = { path = "../../packages/qcsc-prefect-blocks", editable = true }
qcsc-prefect-executor = { path = "../../packages/qcsc-prefect-executor", editable = true }
qcsc-prefect-dice = { path = "../../packages/qcsc-prefect-dice", editable = true }
qcsc_workflow_utility = { path = "../qcsc_workflow_utility", editable = true }

[tool.setuptools]
packages = ["sqd_dice"]
include-package-data = true
zip-safe = false

[project.scripts]
sqd-deploy = "sqd_dice.main:deploy"
sqd-create-blocks = "sqd_dice.create_blocks:main"
